# career-os

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Home.md  NOTICE  README.md  SECURITY.md  career-os.toml  pyproject.toml  skills-lock.json  主页.md
.agents/skills/: README.md
.agents/subagents/: README.md
.claude/: settings.json
.claude/agents/: blind-interviewer.md  career-strategy-advisor.md  evidence-auditor.md
.claude/skills/: agent-scaffold  capability-readiness  career-communication  career-evidence  career-outlook  opportunity-decision  role-market
.codex/: hooks.json
.codex/agents/: blind-interviewer.toml  career-strategy-advisor.toml  evidence-auditor.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  data-model.md  embedded-vault.md  importing.md  installation.md  private-downstream.md  resume.md  semantic-migration.md  skills.md  supply-chain.md  tool-governance.md  tooling.md
docs/assets/: README.md
docs/releases/: README.md  v0.1.0-extraction.json  v0.1.0-mvp.json  v0.1.0-rc.1.md  v0.1.0-rc.2.md  v0.1.0-rc.3.md  v0.1.0-rc.4.md  v0.1.0-rc.5.md  v0.1.0.md  v0.2.0.md
system/: README.md  sbom.cdx.json
system/licenses/: SIL-OFL-1.1.txt
system/migrations/: README.md  record-envelope-1-to-2.json  record-envelope-2-to-3.json
system/obsidian/: README.md  career-guide.canvas  career-map.canvas  dashboard.md  records.base
system/privacy/: public-fixture-policy.json
system/resume/: README.md  career-os-style.sty  career-os.cls  fonts.json  latexmkrc  linespacing_fix.sty  secret-patterns.json
(+137 files in other folders)
